unpackaged/main/default/objects/Navatar_Setup__c/Navatar_Setup__c.object-meta.xml
<CustomObject>
    <label>Navatar Setup</label>
    <nameField>
        <displayFormat>NS - {0000000000}</displayFormat>
        <label>Navatar Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Navatar Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>