unpackaged/main/default/objects/Navatar_Setup__c/fields/AD_Switcher__c.field-meta.xml
<CustomField>
    <fullName>AD_Switcher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AD Switcher</label>
    <type>Checkbox</type>
</CustomField>