unpackaged/main/default/objects/Navatar_Setup__c/fields/Add_Prospect_Setting__c.field-meta.xml
<CustomField>
    <fullName>Add_Prospect_Setting__c</fullName>
    <label>Add Prospect Setting</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>