unpackaged/main/default/objects/Navatar_Setup__c/fields/Admin_Setting__c.field-meta.xml
<CustomField>
    <fullName>Admin_Setting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Setting</label>
    <type>Checkbox</type>
</CustomField>