unpackaged/main/default/objects/Navatar_Setup__c/fields/CCS__c.field-meta.xml
<CustomField>
    <fullName>CCS__c</fullName>
    <label>CCS</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>