unpackaged/main/default/objects/Navatar_Setup__c/fields/CCS_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>CCS_Fundraising__c</fullName>
    <label>CCS Fundraising</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>