unpackaged/main/default/objects/Navatar_Setup__c/fields/CCS_New_Limited_Partner__c.field-meta.xml
<CustomField>
    <fullName>CCS_New_Limited_Partner__c</fullName>
    <label>CCS New Limited Partner</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>