unpackaged/main/default/objects/Navatar_Setup__c/fields/CCS_Partnership__c.field-meta.xml
<CustomField>
    <fullName>CCS_Partnership__c</fullName>
    <label>CCS Partnership</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>