unpackaged/main/default/objects/Navatar_Setup__c/fields/CI_Fund_ID__c.field-meta.xml
<CustomField>
    <fullName>CI_Fund_ID__c</fullName>
    <label>CI Fund ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>