unpackaged/main/default/objects/Navatar_Setup__c/fields/CMF_PFA_Setting__c.field-meta.xml
<CustomField>
    <fullName>CMF_PFA_Setting__c</fullName>
    <label>CMF PFA Setting</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>