unpackaged/main/default/objects/Navatar_Setup__c/fields/CMF_PFC_Setting__c.field-meta.xml
<CustomField>
    <fullName>CMF_PFC_Setting__c</fullName>
    <label>CMF PFC Setting</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>