unpackaged/main/default/objects/Navatar_Setup__c/fields/CMF_Results_Settings__c.field-meta.xml
<CustomField>
    <fullName>CMF_Results_Settings__c</fullName>
    <label>CMF Results Settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>