unpackaged/main/default/objects/Navatar_Setup__c/fields/CTS_Activity__c.field-meta.xml
<CustomField>
    <fullName>CTS_Activity__c</fullName>
    <label>CTS Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Old Institution Only</fullName>
            </value>
            <value>
                <fullName>Old and New Institutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>