unpackaged/main/default/objects/Navatar_Setup__c/fields/CTS_Advanced__c.field-meta.xml
<CustomField>
    <fullName>CTS_Advanced__c</fullName>
    <label>CTS Advanced</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Only</fullName>
            </value>
            <value>
                <fullName>Contact and Institution</fullName>
            </value>
            <value>
                <fullName>Contact, Institution and Custom Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>