unpackaged/main/default/objects/Navatar_Setup__c/fields/DCS__c.field-meta.xml
<CustomField>
    <fullName>DCS__c</fullName>
    <label>DCS</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>