unpackaged/main/default/objects/Navatar_Setup__c/fields/DCS_New_Company__c.field-meta.xml
<CustomField>
    <fullName>DCS_New_Company__c</fullName>
    <label>DCS New Company</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>