unpackaged/main/default/objects/Navatar_Setup__c/fields/DCS_New_Source_Contact__c.field-meta.xml
<CustomField>
    <fullName>DCS_New_Source_Contact__c</fullName>
    <label>DCS New Source Contact</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>