unpackaged/main/default/objects/Navatar_Setup__c/fields/DCS_New_Source_Firm__c.field-meta.xml
<CustomField>
    <fullName>DCS_New_Source_Firm__c</fullName>
    <label>DCS New Source Firm</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>