unpackaged/main/default/objects/Navatar_Setup__c/fields/Email_DD_Setting__c.field-meta.xml
<CustomField>
    <fullName>Email_DD_Setting__c</fullName>
    <label>Email DD Setting</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>