unpackaged/main/default/objects/Navatar_Setup__c/fields/Email_Prospect_Setting__c.field-meta.xml
<CustomField>
    <fullName>Email_Prospect_Setting__c</fullName>
    <label>Email Prospect Setting</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>