unpackaged/main/default/objects/Navatar_Setup__c/fields/IFC_Setting__c.field-meta.xml
<CustomField>
    <fullName>IFC_Setting__c</fullName>
    <label>IFC Setting</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>