unpackaged/main/default/objects/Navatar_Setup__c/fields/IIS__c.field-meta.xml
<CustomField>
    <fullName>IIS__c</fullName>
    <label>IIS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>