unpackaged/main/default/objects/Navatar_Setup__c/fields/MMF_Results_Settings__c.field-meta.xml
<CustomField>
    <fullName>MMF_Results_Settings__c</fullName>
    <label>MMF Results Settings</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>