unpackaged/main/default/objects/Navatar_Setup__c/fields/NN_Action__c.field-meta.xml
<CustomField>
    <fullName>NN_Action__c</fullName>
    <defaultValue>true</defaultValue>
    <label>NN Action</label>
    <type>Checkbox</type>
</CustomField>