unpackaged/main/default/objects/Navatar_Setup__c/fields/NN_Action_Review_Tag__c.field-meta.xml
<CustomField>
    <fullName>NN_Action_Review_Tag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>NN Action Review Tag</label>
    <type>Checkbox</type>
</CustomField>