unpackaged/main/default/objects/Navatar_Setup__c/fields/NN_Information__c.field-meta.xml
<CustomField>
    <fullName>NN_Information__c</fullName>
    <defaultValue>true</defaultValue>
    <label>NN Information</label>
    <type>Checkbox</type>
</CustomField>