unpackaged/main/default/objects/Navatar_Setup__c/fields/Notes_Popup_FollowUp_Task_Fields__c.field-meta.xml
<CustomField>
    <fullName>Notes_Popup_FollowUp_Task_Fields__c</fullName>
    <label>Notes Popup FollowUp Task Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>