unpackaged/main/default/objects/Navatar_Setup__c/fields/Notes_Tag_Exclusion_List__c.field-meta.xml
<CustomField>
    <fullName>Notes_Tag_Exclusion_List__c</fullName>
    <label>Notes Tag Exclusion List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>