unpackaged/main/default/objects/Navatar_Setup__c/fields/RAS__c.field-meta.xml
<CustomField>
    <fullName>RAS__c</fullName>
    <label>RAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>